PRL-5362: CPQ: ShowColumnSettings screen in pricing grid Fixed (added scrollbar) there's still much to improve though

--- a/web/powergrid.css
+++ b/web/powergrid.css
@@ -616,6 +616,7 @@ ul.pg-menu > li:hover {
     padding-right: 30px;
     padding-bottom: 30px;
     border-radius: 3px;
+    overflow: auto;
 }
 
 .columnsettings-column {
